# gitlab-timetable

./: Cargo.toml  README.md  config.toml
src/: config.rs  data.rs  formatting.rs  gitlab_api.rs  main.rs  util.rs
